--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,7 @@ db.default.url="jdbc:h2:mem:play"
 # Assets configuration
 # ~~~~~
 "assets.cache./public/stylesheets/bootstrap.min.css"="max-age=3600"
+applyEvolutions.default=true
 
 # Logger
 # ~~~~~
